# klara

./: .env.example  .gitignore  NOTICE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260502_0001_initial.py  20260502_0002_audio_cache.py  20260515_0003_multilanguage.py  20260516_0004_auth.py  20260516_0005_invitations.py  20260517_0006_onboarding_completed.py  20260519_0007_finish_quiz_attempts.py  20260520_0008_klara_note.py  20260616_0009_modules.py  20260616_0010_gender_lexicon_provenance.py  20260616_0011_gender_attempts.py  (+5 more)
backend/spikes/: spike_22_streaming_bridge.py
backend/tests/: conftest.py  test_auth_null_password.py  test_auth_signup.py  test_auth_verify_reset.py  test_build_library.py  test_claim_story.py  test_create_story_module.py  test_curriculum_axes.py  test_curriculum_competence.py  test_curriculum_coverage.py  test_curriculum_inventory.py  test_curriculum_lemmatize.py  test_curriculum_selection.py  test_db_secret_hygiene.py  test_gender_audit.py  test_gender_cloze.py  test_gender_eligibility.py  test_gender_grading.py  test_gender_lexicon.py  test_gender_review.py  test_gender_rules.py  test_invitations.py  test_klara_note.py  test_l1_notes.py  test_l1_notes_endpoint.py  test_library_service.py  test_llm_client.py  test_modules.py  test_modules_path.py  test_owner_adoption.py  test_phonetic_hints.py  test_practice_queue.py  test_practice_session.py  test_pronunciation.py  test_pronunciation_diagnose.py  test_pronunciation_stream.py  test_speak.py  test_speak_analysis.py  test_srs_maintenance.py  test_srs_recall.py  (+15 more)
(+318 files in other folders)
