[project]
name = "klara"
version = "0.1.0"
description = "Klara — language-learning app (ADHD-friendly, multilingual)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "litellm>=1.60",
    "httpx>=0.28",
    "structlog>=24.4",
    "python-multipart>=0.0.20",
    "orjson>=3.10",
    "fastapi-users[sqlalchemy,oauth]>=14",
    "argon2-cffi>=23",
    "httpx-oauth>=0.15",
    "azure-cognitiveservices-speech>=1.40",
    "simplemma>=1.1",
    "json-repair>=0.61.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klara"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# IPA symbols documented in Speak's phoneme-matching code/docstrings (ʏ looks
# like y, ː looks like a colon — both are deliberate IPA, not typos).
allowed-confusables = ["ʏ", "ː"]
ignore = [
    "E501",
    # Ambiguous unicode chars used intentionally: en dash in user-facing
    # prompts (1–3 words) and French apostrophe `’` in the elision constants
    # for the French story generator.
    "RUF001",
    # SQLAlchemy `DeclarativeBase.type_annotation_map` is API-mandated as a
    # class-level mutable mapping.
    "RUF012",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
